--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,37 +1,178 @@
+
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
 
-#container {
-  width: 1000px;
-  margin: 0 auto;
+body {
+font-family: Arial, sans-serif;
+background-color: #f9f9f9;
 }
 
-#menu ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  padding: 25px;
-  box-shadow: 0px 4px 3px -4px #000;
+/* Comum */
+#layout {
+padding: 10px;
 }
 
-#menu a {
-  background-color: #555;
-  color: #fff;
-  padding: 12px 35px;
-  color: #fff;
-  border-radius: 8px;
-  text-decoration: none;
-  font-size: 0.8rem;
+/* Layout 1 */
+.layout1 .header,
+.layout1 .footer {
+background: #333;
+color: white;
+padding: 20px;
+text-align: center;
 }
 
-#menu a:hover {
-  background-color: #999;
+.layout1 .main {
+display: flex;
+gap: 10px;
+margin: 10px 0;
 }
 
-/* NÃO ALTERE DAQUI PRA CIMA */
-/* ESCREVA SEU CÓDIGO ABAIXO */
+.layout1 .artigo {
+flex: 1;
+background: aquamarine;
+padding: 20px;
+}
+
+.layout1 .menu {
+background-color: #e96f9d; 
+padding: 20px;
+width: 200px;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+gap: 15px;
+margin: 20px;
+font-family: sans-serif;
+}
+
+.menu a {
+color: #000;
+text-decoration: none;
+font-weight: bold;
+padding: 10px;
+background-color: white;
+border-radius: 5px;
+text-align: center;
+transition: 0.3s;
+}
+
+.menu a:hover {
+background-color: #ffd6de;
+color: #333;
+}
+
+
+img {
+    width: 300px;
+    height: 200px auto;
+}
+
+/* Layout 2 */
+.layout2 .header {
+background:#9808a5;
+color:aliceblue;
+padding: 20px;
+text-align: center;
+}
+.layout2 .footer {
+background: #444;
+color: white;
+padding: 20px;
+text-align: center;
+}
+
+.layout2 .main {
+display: flex;
+gap: 10px;
+margin: 10px 0;
+}
+
+.layout2 .menu {
+background-color: #e96f9d; 
+padding: 20px;
+width: 200px;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+gap: 15px;
+margin: 20px;
+font-family: sans-serif;
+}
+
+.menu a {
+color: #000;
+text-decoration: none;
+font-weight: bold;
+padding: 10px;
+background-color: white;
+border-radius: 5px;
+text-align: center;
+transition: 0.3s;
+}
+
+.menu a:hover {
+background-color: #ffd6de;
+color: #333;
+}
+
+
+.layout2 .content {
+flex: 1;
+background: #2162ad;
+padding: 15px;
+}
+
+.layout2 .ad {
+width: 100px;
+background: #b3f3f0;
+padding: 15px;
+}
+
+/* Layout 3 */
+.layout3 .grid {
+display: flex;
+flex-wrap: wrap;
+width: 300px;
+margin: 30px auto;
+}
+
+.layout3 .menu {
+background-color: #e96f9d; 
+padding: 20px;
+width: 200px;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+gap: 15px;
+margin: 20px;
+font-family: sans-serif;
+}
+
+.menu a {
+color: #000;
+text-decoration: none;
+font-weight: bold;
+padding: 10px;
+background-color: white;
+border-radius: 5px;
+text-align: center;
+transition: 0.3s;
+}
+
+.menu a:hover {
+background-color: #ffd6de;
+color: #333;
+}
+
+.layout3 .cell {
+width: 50px;
+height: 50px;
+background: hwb(293 68% 3%);
+}
+
+.layout3 .dark {
+background: #9808a5;
+}
